--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>hello, world</h1>
     <p>Call me Ishmael.</p>
+    <a href="about.html" style="text-decoration: none;">About</a>
   </body>
 </html>
