--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <h1>hello, world</h1>
     <p>Call me Ishmael.</p>
     <a href="about.html" style="text-decoration: none;">About</a>
+    <img src='images/breaching_whale.jpg' />
   </body>
 </html>
