--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>hello, world</h1>
     <p>Call me Ishmael.</p>
+    <p>Yargh! It's the white whale!</p>
     <a href="about.html" style="text-decoration: none;">About</a>
     <img src='images/breaching_whale.jpg' />
   </body>
