add content to index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>hello, world</h1>
     <p>Call me Ishmael.</p>
     <p>Yargh! It's the white whale!</p>
+    <p>Sample change, yarr</p>
     <a href="about.html" style="text-decoration: none;">About</a>
     <img src='images/breaching_whale.jpg' />
   </body>
