--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>hello, world</h1>
     <p>Call me Ishmael.</p>
     <p>Yargh! It's the white whale!</p>
-    <p>Sample change, yarr</p>
+    <p>Another paragraph</p>
     <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>
     <a href="about.html" style="text-decoration: none;">About</a>
     <img src='images/breaching_whale.jpg' />
