--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <p>Call me Ishmael.</p>
     <p>Yargh! It's the white whale!</p>
     <p>Sample change, yarr</p>
+    <p>I'm not sure why it doesn't know about the change.</p>
     <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>
     <a href="about.html" style="text-decoration: none;">About</a>
     <img src='images/breaching_whale.jpg' />
