add alt attr to img

--- a/index.html
+++ b/index.html
@@ -6,14 +6,8 @@
   <body>
     <p>Call me Ishmael.</p>
     <p>Yargh! It's the white whale!</p>
-<<<<<<< HEAD
-=======
-    <p>Sample change, yarr</p>
-    <p>I'm not sure why it doesn't know about the change.</p>
-    <p>Another paragraph</p>
->>>>>>> a148f60e9d6e8e8665eeb9bae260d6b5f7ea133f
     <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>
     <a href="about.html" style="text-decoration: none;">About</a>
-    <img src='images/breaching_whale.jpg' />
+    <img src='images/breaching_whale.jpg' alt="Breaching Whale" />
   </body>
 </html>
