--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <p>Another paragraph</p>
     <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>
     <a href="about.html" style="text-decoration: none;">About</a>
-    <img src='images/breaching_whale.jpg' />
+    <img src='images/breaching_whale.jpg' alt='Whale' />
   </body>
 </html>
